Fixed bug with rewards page not showing in some Firefox

--- a/ScoutWeb/public/css/css-ejs/rewards.css
+++ b/ScoutWeb/public/css/css-ejs/rewards.css
@@ -1255,10 +1255,10 @@ html {
 }
 @-moz-keyframes display {
   from {
-    -webkit-transform: scale(0);
+    transform: scale(0);
   }
   to {
-    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
 @-webkit-keyframes display {
